# effectivebackend

./: README.md  pyproject.toml
locallibrary/catalog/: admin.py  models.py
locallibrary/catalog/migrations/: 0001_initial.py  0002_alter_book_options_alter_bookinstance_options_and_more.py
locallibrary/locallibrary/: settings.py  urls.py
