[tool.poetry]
name = "src"
version = "1.0.0"
description = "LocalLibrary"
authors = ["Tintanaa <miiagkov123456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
click = "^8.1.7"
colorama = "^0.4.6"
django = "^5.1.4"
djangorestframework = "^3.15.2"
packaging = "^24.2"
pathspec = "^0.12.1"
platformdirs = "^4.3.6"
python-dotenv = "^1.0.1"
sqlparse = "^0.5.2"
tzdata = "^2024.2"
django-isbn-field = "^0.5.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy-extensions = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
